summative.moria.Moria.scala.error
Compilation error:
Moria:5: error: ';' expected but ',' found.
       recule(),poseBiscuit(),recule()}
               ^Moria:15: error: ';' expected but ',' found.
          case Direction.EST => droite(),avance()
                                        ^Moria:16: error: ';' expected but ',' found.
          case Direction.SOUTH => gauche(),avance()
                                          ^